api-pastry-demo/api-implementations/quarkus-api-pastry/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: quarkus-api-pastry
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: quarkus-api-pastry.192.168.64.7.nip.io
    http:
      paths:
      - backend:
          serviceName: quarkus-api-pastry
          servicePort: 8080
